assets/css/custom.css
/* 
 * Custom CSS Rules for the RSE Sheffield website. 
 * Separate from the theme rules in-case we change theme
 */

/*
    Bootstrap breakpoints for reference:
    xs 
    sm @media (min-width:576px)
    md @media (min-width:768px)
    lg @media (min-width:992px)
    xl @media (min-width:1200px)
*/

body {
    color: var(--uos-midnight-black)
}

.header{
    background-color: var(--uos-wave-white);
}

.promo{
    background: var(--uos-brand-violet);
}

.promo h1,
.promo h2,
.promo h3,
.promo h4,
.promo h5 {
    color: var(--uos-wave-white);
}

.footer{
    background: var(--uos-brand-violet);
}

/* Sizes for h1 to h6, overriding bootstrap css */
h1, .h1 { font-size: 2.5rem; }
h2, .h2 { font-size: 2rem; }
h3, .h3 { font-size: 1.75rem; }
h4, .h4 { font-size: 1.5rem; }
h5, .h5 { font-size: 1.25rem; }
h6, .h6 { font-size: 1rem; }

h1, h2, h3, h4, h5, h6  {
    color: var(--uos-brand-violet);
}

a {
    color: var(--uos-brand-violet);
}

.nav-link{
    color: var(--uos-midnight-black) !important;
}

.contact {
    background: var(--uos-midnight-black);
}

.contact-inner a {
    color: var(--uos-powder-blue);
    text-decoration: underline;
}

.contact-inner a:hover {
    color: var(--uos-brand-violet-70);
}

.contact-inner h2 {
    color: var(--uos-wave-white) !important;
}

.seminar-section {
    margin-bottom: 2rem;
    padding-bottom: 1rem;
    border-bottom: 1px solid #ddd;
}

/* Make all images behave fluidly by default, unless they have a width or height attribute. I.e. not wider than their parent with a maintained aspect ratio. */
img:not([width]):not([height]) {
    max-width: 100%;
    height: auto;
}

@media (min-width: 768px) and (max-width: 991px){
    .promo .intro {
        font-size: 18px;
    }
}

/* Visually distinguish past events.*/
.event-item-previous a {
    color: var(--uos-brand-violet-70);
}
.event-item-previous > div >img {
    opacity: 0.40;
}

figcaption {
    font-style: italic;
    font-weight: bold;
    font-size: small;
}

/* Style Pagination of Blogposts */
.pagination a, .pagination span {
    padding: 7px 18px;
    border: 1px solid #eee;
    margin-left: -2px;
    margin-right: -2px;
    margin-bottom: 0px;
    background-color: var(--uos-wave-white);
    display: inline-block;
}
.pagination a:hover {
    background-color: #f1f1f1;
    text-decoration: none;
}
.pagination a {
    cursor: pointer;
}
.pagination {
    text-align: center;
}
/* Adjust heading sizes for blog-excerpts */
.blog-excerpt h1, .blog-excerpt .h1 { font-size: 2rem; }
.blog-excerpt h2, .blog-excerpt .h2 { font-size: 1.75rem; }
.blog-excerpt h3, .blog-excerpt .h3 { font-size: 1.5rem; }
.blog-excerpt h4, .blog-excerpt .h4 { font-size: 1.25rem; }
.blog-excerpt h5, .blog-excerpt .h5 { font-size: 1rem; }
.blog-excerpt h6, .blog-excerpt .h6 { font-size: 1rem; } /* No h7 to steal a size from */

 hr.blog-post-seperator {
  width: 50%; /*Differentiate hr, to those used within markdown/blog posts*/
  border-top: 2px solid;
  margin-top: 32px; /*2 rem, double end of paragraph*/
  margin-bottom: 32px;
}
div.pagination-wrapper {
  justify-content: center;
  flex-flow:row wrap;
  display: flex;
}
div.all-posts {
  flex-basis: 100%;
  text-align: center;
  margin-bottom: 16px; /*1 rem, same as end of paragraph*/
}

/* Extra custom styling for pre / code blocks */
pre {
    background-color: var(--uos-midnight-black);
    padding: 1em;
    margin: 0 0 1em 0;
    border-radius: 0.4em;
    white-space: pre-wrap;
    word-wrap: break-word;
    overflow-wrap: break-word;
    color: #f8f8f2;
    font-family: monospace;
    hyphens: none;
    white-space: pre;
    word-spacing: normal;
    word-break: normal;

}

/* comments in code blocks */
pre.highlight > code > span.c, pre.highlight > code > span.c1 {
    color: var(--uos-peach);
}

code {
    color: var(--uos-coral);
    font-family: monospace;
}

.highlight {
    border-radius: 0.4em;
}

pre.highlight{
    line-height: 1.5;
}


/* Custom blockquote styling */
blockquote {
    margin: 0 0 1rem 0;
    padding: 0 1rem;
    color: var(--uos-midnight-black-80);
    border-left: .3rem solid var(--uos-midnight-black-80);
}

/* optionally make .btn's wrap text */ 
.btn-wrap {
    white-space: normal;
}

.btn-primary {
    background-color: var(--uos-powder-blue);
    border-color: var(--uos-powder-blue);
    color: var(--uos-midnight-black);
}

.btn-primary:hover {
    background-color: var(--uos-brand-violet);
    border-color: var(--uos-brand-violet);
    color: var(--uos-wave-white);
}

.btn-success {
    background-color: var(--uos-spearmint);
    border-color: var(--uos-spearmint);
    color: var(--uos-midnight-black);
}

.btn-success:hover {
    background-color: var(--uos-brand-violet);
    border-color: var(--uos-brand-violet);
    color: var(--uos-wave-white);
}

.sm-a {
    color: var(--uos-pale-violet);
    text-decoration: underline;
}

a:hover {
    color: var(--uos-brand-violet);
}

.sm-a:hover{
    color: var(--uos-powder-blue);
}

/* project page tag cloud */
a.tag-link.selected, a.filter-link.selected{
    font-weight: bold;
}


/* square images  */
.img-square-crop {
    aspect-ratio: 1 / 1;
    object-fit: cover;
}

